# github-action-example

./: Cargo.toml  README.md
.github/workflows/: build_and_deploy_rust_app.yml  hello_world.yml
src/: main.rs
