[package]
name = "test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.20", features = ["tokio"] }
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
hyper = { version = "0.14.23", features = ["client"] }

tracing = "0.1.37"
tracing-subscriber = "0.3.16"


